# photoprism

./: .clabot  .codespellrc  .deepsource.toml  .dockerignore  .drone.yml  .fossa.yml  .gitattributes  .gitignore  .gitmodules  .ldap.cfg  .report.tmpl  .semver  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUNDING.yml  Gopkg.toml  LICENSE  Makefile  NOTICE  NOTICE.md  README.md  SECURITY.md  SPONSORS.md  album.go  camera.go  codecov.yml  colors.go  colors_test.go  compose.armv7.yaml  compose.ci.yaml  compose.latest.yaml  compose.local.yaml  compose.mariadb.yaml  compose.mysql.yaml  compose.postgres.yaml  compose.yaml  config.dev.yml  (+44 more)
.chglog/: CHANGELOG.tpl.md  config.yml
.devcontainer/: devcontainer.json  docker-compose.yml
.do/: deploy.template.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
assets/: .buildignore  LICENSE  LICENSE.md  README  README.md
configs/: docker-compose.prod.yml  docker-compose.yml  photoprism.dev.yml  photoprism.prod.yml  photoprism.yml
docker/: README.md  docker-bake.hcl  entrypoint.sh
docker/clip/: .gitignore  Dockerfile  pyproject.toml
docker/clip/clip_api/: clip_api.py
docs/: keyboard-shortcuts.md
frontend/: .babelrc  .eslintrc.js  .report.json  Makefile  NOTICE  karma.conf.js  package-lock.json  package.json  postcss.config.js  testcaferc.json  webpack.config.js
podman-systemd/: .gitignore  README.md  container-mariadb-user.template  container-mariadb.service  container-photoprism-database-default.env  container-photoprism-database-user.template  container-photoprism-database.service  (+7 more)
(+5247 files in other folders)
