[tool.poetry]
name = "clip_api"
version = "0.1.0"
description = ""
authors = ["tknobi <t+git@knobi.net>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.71.0"
torch = "^1.10.1"
torchvision = "^0.11.2"
requests = "^2.27.1"
clip = { git = "https://github.com/openai/CLIP.git", rev = "main" }
tqdm = "^4.62.3"
ftfy = "^6.0.3"
regex = "^2021.11.10"
python-multipart = "^0.0.5"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
